# libteam

./: configure.ac
examples/: Makefile.am
include/: team.h
libteam/: Makefile.am  ifinfo.c  libteam.c
man/: teamd.conf.5
teamd/: Makefile.am  teamd.c  teamd.h  teamd_lag_state_persistence.c  teamd_lag_state_persistence.h  teamd_link_watch.c  teamd_lw_ttdp.c  teamd_lw_ttdp.h  teamd_runner_lacp.c  teamd_runner_loadbalance.c  teamd_runner_ttdp.c  teamd_runner_ttdp_ipc.c  teamd_runner_ttdp_ipc.h  teamd_state.c  teamd_state.h  ttdp_checksum.c
utils/: Makefile.am  teamdctl.c
utils/snmp/: dot3_ad_agg_port_list_table.c  dot3_ad_agg_port_table.c  dot3_ad_agg_table.c  teamdagentd.c  teamdagentd.h
